--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: circ
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Circular shifting operations for strings.
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Arun Ramamurthy
+Maintainer: Arun Ramamurthy <contact@arun.run>
+Description: Use the historical bitstring operators, LCIRC and RCIRC, on character strings. 
+License: CC0
 Encoding: UTF-8
 LazyData: true
-Suggests: testthat,
+Suggests: 
+    testthat,
     covr
+RoxygenNote: 6.1.0
