--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,11 @@ Description: Use the historical bitstring operators, LCIRC and RCIRC, on charact
 License: CC0
 Encoding: UTF-8
 LazyData: true
-Suggests: 
+Suggests:
     testthat,
     covr
 RoxygenNote: 6.1.0
+Imports:
+    glue,
+    magrittr,
+    dplyr
